--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>My Photo Gallery</h1>
     <!-- Create a gallery with links to your images using the "data-lightbox" attribute -->
-    <a href="images/background_microbes.jpg" data-lightbox="gallery"><img src="images/background_microbes.jpg" alt="Image 1"></a>
+    <a href="background_microbes.jpg" data-lightbox="gallery"><img src="background_microbes.jpg" alt="Image 1"></a>
     <a href="images/image2.jpg" data-lightbox="gallery"><img src="images/image2.jpg" alt="Image 2"></a>
     <!-- Add more images as needed -->
     <!-- Include Lightbox JavaScript from a CDN -->
