--- a/gallery/index.html
+++ b/gallery/index.html
@@ -12,6 +12,10 @@
     <!-- Create a gallery with links to your images using the "data-lightbox" attribute -->
     <a href="background_multilayer.jpg" data-lightbox="gallery"><img src="background_multilayer.jpg" alt="Image 1"></a>
     <a href="images/image2.jpg" data-lightbox="gallery"><img src="images/image2.jpg" alt="Image 2"></a>
+    <a href="background_multilayer.jpg" data-lightbox="test">Image #1</a>
+    <a href="background_multilayer.jpg" data-lightbox="test">test #2</a>
+
+
     <!-- Add more images as needed -->
     <!-- Include Lightbox JavaScript from a CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
